Battle Royale -> Free-for-All

--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -15,7 +15,7 @@ Of course, you can adjust everything at will.
 
 Choose one of the following types for your play:
 
-\textbf{Battle Royale} -- Win by eliminating your opponents or gaining more Victory Points (VPs) than them.
+\textbf{Free-for-All} -- Win by eliminating your opponents or gaining more Victory Points (VPs) than them.
 VPs are counted in accordance to the Tournament book.
 Additionally, you get:
 \begin{itemize}
@@ -65,7 +65,7 @@ Choose one of the following sizes:
   \textbf{Central Map Tile(s)}\\
   \bigskip
   \hspace{-0.7em}
-  \begin{tabularx}{0.99\linewidth}{p{1.7em}>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X} & \darkcell[1.4]{Battle Royale} & \darkcell[1.4]{King of \phantom{y}the Hill\phantom{y}} & \darkcell[1.4]{Capture \phantom{y}the Grail\phantom{y}} \\
+  \begin{tabularx}{0.99\linewidth}{p{1.7em}>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X} & \darkcell[1.4]{Free-for-All} & \darkcell[1.4]{King of the Hill} & \darkcell[1.4]{Capture the Grail} \\
     \darkcell[1.8]{S}
     & \lightcell[1.8]{\includegraphics[width=0.75\linewidth]{\maps/near-tile.png}}
     & \multirow{3}{*}[7.6ex]{\parbox{\linewidth}{\centering\lightcell[6.19]{\includegraphics[width=0.75\linewidth]{\maps/center-tile.png} with a Dragon Utopia (C1 or C3)}}}
@@ -96,7 +96,7 @@ Decide player order before placing the remaining Tiles.
 In reverse player order, each player places one Tile in descending level (Near \rightarrow\ Far \rightarrow\ Starting).  % no-check-caps
 Every new Tile needs to connect to at least one existing Tile.
 
-The following \textbf{example} shows building the map for a \textbf{3-player XL Battle Royale}, with player 1 playing as \textcolor{rampartbg}{\textbf{Rampart}}, player 2 as \textcolor{infernobg}{\textbf{Inferno}}, and player 3 as \textcolor{castlebg}{\textbf{Castle}}.
+The following \textbf{example} shows building the map for a \textbf{3-player XL Free-for-All}, with player 1 playing as \textcolor{rampartbg}{\textbf{Rampart}}, player 2 as \textcolor{infernobg}{\textbf{Inferno}}, and player 3 as \textcolor{castlebg}{\textbf{Castle}}.
 First, put the Center (VI-VII) Map Tile in the middle, and then proceed to distribute Near (IV-V) Map Tiles in the following order:
 
 \bigskip
@@ -149,13 +149,13 @@ First, put the Center (VI-VII) Map Tile in the middle, and then proceed to distr
   % First row
   \noindent
   \hspace{0.01\textwidth} % Add left margin
-  \playerimage{\maps/battle-royale-xl-1.png}{1}%
+  \playerimage{\maps/free-for-all-xl-1.png}{1}%
   \playerarrow{-2.8}{0.2}{60}{castlebg}
   \hfill
-  \playerimage{\maps/battle-royale-xl-2.png}{2}%
+  \playerimage{\maps/free-for-all-xl-2.png}{2}%
   \playerarrow{-1.5}{0.2}{160}{infernobg}
   \hfill
-  \playerimage{\maps/battle-royale-xl-3.png}{3}
+  \playerimage{\maps/free-for-all-xl-3.png}{3}
   \playerarrow{-4.3}{2.6}{-60}{rampartbg}
   \hspace{0.01\textwidth} % Add right margin
   \begin{center}
@@ -166,13 +166,13 @@ First, put the Center (VI-VII) Map Tile in the middle, and then proceed to distr
   % Second row
   \noindent
   \hspace{0.01\textwidth} % Add left margin
-  \playerimage{\maps/battle-royale-xl-4.png}{4}%
+  \playerimage{\maps/free-for-all-xl-4.png}{4}%
   \playerarrow{-3.2}{3.2}{-30}{castlebg}
   \hfill
-  \playerimage{\maps/battle-royale-xl-5.png}{5}%
+  \playerimage{\maps/free-for-all-xl-5.png}{5}%
   \playerarrow{-0.8}{1.4}{210}{infernobg}
   \hfill
-  \playerimage{\maps/battle-royale-xl-6.png}{6}
+  \playerimage{\maps/free-for-all-xl-6.png}{6}
   \playerarrow{-3.6}{1.2}{120}{rampartbg}
   \hspace{0.01\textwidth} % Add right margin
   \begin{center}
@@ -207,17 +207,17 @@ Then, keeping the same order, place Far (II-III) Map Tiles, and finally Starting
 \begin{minipage}{\textwidth}
   \noindent
   \hspace{0.01\textwidth} % Add left margin
-  \playerimage{\maps/battle-royale-xl-far-1.png}{7}%
+  \playerimage{\maps/free-for-all-xl-far-1.png}{7}%
   \playerarrow{-4.4}{3.8}{-30}{rampartbg}
   \playerarrow{-3.9}{-0.3}{60}{infernobg}
   \playerarrow{-0.6}{4.0}{-120}{castlebg}
   \hfill
-  \playerimage{\maps/battle-royale-xl-far-2.png}{8}%
+  \playerimage{\maps/free-for-all-xl-far-2.png}{8}%
   \playerarrow{-4.7}{4.3}{-60}{rampartbg}
   \playerarrow{-5.2}{-0.1}{30}{infernobg}
   \playerarrow{-0.9}{4.3}{-150}{castlebg}
   \hfill
-  \playerimage{\maps/battle-royale-xl-finish.png}{9}
+  \playerimage{\maps/free-for-all-xl-finish.png}{9}
   \playerarrow{-5.2}{4.3}{-30}{rampartbg}
   \playerarrow{-5.5}{0.9}{30}{infernobg}
   \playerarrow{-0.3}{4.3}{-150}{castlebg}
