--- a/translations/back_cover.tex/cs.po
+++ b/translations/back_cover.tex/cs.po
@@ -7,19 +7,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-03-26 09:51+0000\n"
-"PO-Revision-Date: 2024-07-01 16:37+0200\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-05-04 14:05+0000\n"
+"Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
+"Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/sections/back_cover/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
+"X-Generator: Weblate 5.12-dev\n"
 
 #. type: Plain text
 #: sections/back_cover.tex:4
 msgid "\\restoregeometry"
-msgstr ""
+msgstr "\\restoregeometry"
 
 #. type: Plain text
 #: sections/back_cover.tex:12
@@ -29,3 +31,7 @@ msgid ""
 "center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
 "back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
+"\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
+"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
+"back.jpg} }; \\end{tikzpicture} }"
