--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-03-29 17:21+0000\n"
-"Last-Translator: Vojtěch Růžička <kelghor@gmail.com>\n"
+"PO-Revision-Date: 2025-05-04 14:05+0000\n"
+"Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/clash-scenarios/bloody_grail/cs/>\n"
 "Language: cs\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
-"X-Generator: Weblate 5.11-dev\n"
+"X-Generator: Weblate 5.12-dev\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -54,6 +54,8 @@ msgid ""
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:32 coops/close_to_enemies.tex:35
@@ -97,6 +99,8 @@ msgid ""
 "\\textbf{Author:} Re4XN\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} Re4XN\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:9
@@ -149,6 +153,8 @@ msgid ""
 "\\textbf{Starting Resources:} 13 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Úvodní Suroviny:} 13 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:27
@@ -281,15 +287,13 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:63
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Timed Events}}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\columnbreak\n"
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
 "\\subsection*{\\MakeUppercase{Časované Události}}\n"
 "\n"
 
@@ -352,47 +356,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:118
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
-#| "  \\begin{enumerate}[leftmargin=15pt]\n"
-#| "    \\item \\textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:\n"
-#| "    \\begin{enumerate}\n"
-#| "      \\item \\textbf{[1st Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_negative}.\n"
-#| "      \\item \\textbf{[2nd Obelisk]} Increase your \\svg{gold}, \\svg{building_materials}, or \\svg{valuables} income by 1 step.\n"
-#| "      \\item \\textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have a Secondary Hero, gain 3 \\svg{gold} instead. Then, choose one enemy player to discard 2 random Cards from their hand.\n"
-#| "      \\item \\textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.\n"
-#| "    \\end{enumerate}\n"
-#| "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:\n"
-#| "    \\begin{enumerate}\n"
-#| "      \\item *\\bronze\\: Gain 6 \\svg{gold}, 3 \\svg{building_materials}, and 1 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (4)} the Minor Artifact Deck.\n"
-#| "      \\item *\\silver\\: Gain 12 \\svg{gold}, 6 \\svg{building_materials}, and 2 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (3)} the Major Artifact Deck.\n"
-#| "      \\item *\\golden\\: Gain 18 \\svg{gold}, 9 \\svg{building_materials}, and 3 \\svg{valuables}. Additionally, \\textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \\textbf{Search (2)} the \\azure\\ Unit Deck; you may Recruit one of these Units for half the cost (rounded down).\n"
-#| "    \\end{enumerate}\n"
-#| "  \\end{enumerate}\n"
-#| "  \\item A player that chooses \\textbf{Sacrifice} at an Obelisk gains the title of ``\\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \\textcolor{darkcandyapplered}{Blood Knight} may never choose the \\textbf{Cleanse} option when Visiting an Obelisk.\n"
-#| "  \\item A player that chooses \\textbf{Cleanse} at an Obelisk gains the title of ``\\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction Cube on their Hero portrait to mark this effect. A \\textcolor{cobalt}{Grail Knight} may never choose the \\textbf{Sacrifice} option when Visiting an Obelisk.\n"
-#| "  \\item When a player chooses \\textbf{Sacrifice} at an Obelisk, place a number of Faction Cubes on the sacrificed Unit Card and on the Obelisk Field equivalent to the number of times the player has chosen the \\textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction Cubes on the Unit Card and 2 Faction Cubes on the Obelisk Field.\n"
-#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.\n"
-#| "  \\item If a Unit Recruited at an Obelisk is defeated, remove it.\n"
-#| "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.\n"
-#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \\azure\\ Units.\n"
-#| "  \\item Whenever an Astrologers Proclaim or Event Card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event Card.\n"
-#| "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
-#| "  \\item Ignore Combat encounters on the Field with the Grail.\n"
-#| "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-#| "  \\item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.\n"
-#| "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
-#| "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
-#| "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
-#| "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
-#| "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-#| "  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
-#| "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
-#| "  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units.''\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
@@ -439,9 +403,10 @@ msgstr ""
 "  \\begin{enumerate}\n"
 "    \\item \\textbf{[Očištění]} Hráč obdrží jednu z následujících výhod, v závislosti na počtu Navštívených Obelisků:\n"
 "    \\begin{enumerate}\n"
-"      \\item \\textbf{[1. Obelisk]} Hoďte 2 \\svg{treasure} a vyberte 1 k vyřešení; poté získejte \\svg{morale_negative}.\n"
+"      \\item \\textbf{[1. Obelisk]} Získáte Sekundárního Hrdinu. Umístěte jeho model na toto Pole. Pokud již Sekundárního Hrdinu máte, získejte \n"
 "      \\item \\textbf{[2. Obelisk]} Zvyšte svůj příjem \\svg{gold}, \\svg{building_materials}, nebo \\svg{valuables} o 1 krok.\n"
-"      \\item \\textbf{[3. Obelisk]} Získáte Sekundárního Hrdinu. Umístěte jeho model na toto Pole. Pokud již Sekundárního Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné Karty ze své ruky.\n"
+"      \\item \\textbf{[3. Obelisk]} Hoďte 2 \\svg{treasure} a vyberte 1 k vyřešení; poté získejte \\svg{morale_negative} a \\svgeven{movement}.\n"
+"místo toho 6 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 1 náhodné Karty ze své ruky.\n"
 "      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 Karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím Balíčku Kartu dle vašeho výběru a vložte ji do své ruky.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Oběť]} Odstraňte Kartu Jednotky své Frakce z vašeho Balíčku Jednotek výměnou za:\n"
@@ -476,12 +441,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:124
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  {\\transparent{0.2}\\includegraphics[width=0.7\\linewidth, keepaspectratio]{\\art/slayer.png}}\n"
-#| "\\end{center}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{center}\n"
 "  \\transparent{0.2}{\\includegraphics[width=0.5\\linewidth, keepaspectratio]{\\art/bless.png}}\n"
@@ -489,20 +449,13 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  {\\transparent{0.2}\\includegraphics[width=0.3\\linewidth, keepaspectratio]{\\art/slayer.png}}\n"
+"  \\transparent{0.2}{\\includegraphics[width=0.5\\linewidth, keepaspectratio]{\\art/bless.png}}\n"
 "\\end{center}\n"
 "\n"
 
 #. type: tikzpicture
 #: clash/bloody_grail.tex:138
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[overlay]\n"
-#| "  \\centering\n"
-#| "  \\node at (4.5, -5) {\\includegraphics[scale=0.165]{\\maps/bloody-grail-2p.png}};\n"
-#| "  \\node at (4.5, -10) {\\footnotesize{\\textbf{\\MakeUppercase{2-PLAYER SCENARIO}}}};\n"
-#| "  \\node at (12.1, -14) {\\includegraphics[scale=0.165]{\\maps/bloody-grail-4p.png}};\n"
-#| "  \\node at (12.1, -21.6) {\\footnotesize{\\textbf{\\MakeUppercase{4-PLAYER SCENARIO}}}};"
+#, no-wrap
 msgid ""
 "[overlay]\n"
 "  \\node(bg)[anchor=center, opacity=0.07, xshift=0em, yshift=-25em] at (current page.south) {\n"
@@ -515,6 +468,9 @@ msgid ""
 "  \\node at (12.1, -21.6) {\\footnotesize{\\textbf{\\MakeUppercase{4-PLAYER SCENARIO}}}};"
 msgstr ""
 "[overlay]\n"
+"  \\node(bg)[anchor=center, opacity=0.07, xshift=0em, yshift=-25em] at (current page.south) {\n"
+"    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/quiet_eye_of_the_dragon.png}\n"
+"  };\n"
 "  \\centering\n"
 "  \\node at (4.5, -5) {\\includegraphics[scale=0.165]{\\maps/bloody-grail-2p.png}};\n"
 "  \\node at (4.5, -10) {\\footnotesize{\\textbf{\\MakeUppercase{SCÉNÁŘ PRO 2 HRÁČE}}}};\n"
