--- a/translations/the_fractured_kingdoms.tex/cs.po
+++ b/translations/the_fractured_kingdoms.tex/cs.po
@@ -7,14 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-16 17:47+0200\n"
-"PO-Revision-Date: 2025-03-29 21:01+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-05-04 14:05+0000\n"
+"Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
+"Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/clash-scenarios/the_fractured_kingdoms/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
+"X-Generator: Weblate 5.12-dev\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -124,27 +126,21 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: clash/the_fractured_kingdoms.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\\images/"
-#| "town_portal.png}"
 msgid ""
 "\\addscenariosection{1}{Clash Scenario}{The Fractured Kingdoms}{\\images/"
 "two_way_monolith.png}"
 msgstr ""
-"\\addscenariosection{1}{Střet}{Hrad Dračí Kletby}{\\images/town_portal.png}"
+"\\addscenariosection{1}{Střet}{Rozpolcené Království}{\\images/"
+"two_way_monolith.png}"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:7
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Author:} Tm335\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Author:} mopo\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} Tm335\n"
+"\\textbf{Autor:} mopo\n"
 "\n"
 
 #. type: multicols
@@ -154,61 +150,46 @@ msgid ""
 "\\textit{A terrible Armageddon has struck the lands. Five rulers have found their kingdoms broken and torn apart, but after some time has passed, they discovered their lands had drifted in the magic-laden space of this universe to collide with one another. All five recognize that their first priority must be to rebuild and regrow, and they form a five-kingdom alliance. However, each also knows in the back of their minds that whoever breaks the alliance first, would gain a sharp first-strike advantage...}\n"
 "\n"
 msgstr ""
+"\\textit{Strašlivý Armagedon dopadl na zemi. Království všech pěti vládců se nacházela rozpadlá a roztrhaná na kusy, čas plynul. Po nějaké době vládci zjistili, že se jejich země skrz pohyb přes magií překypující prostor dostaly do vzájemné kolize s jednou další. Všech pět vládců se shodlo, že jejich nejvyšší priorita musí být budování a růst, a tak utvoří spojenectví pěti království. Avšak každý z nich má na paměti, že kdokoli prolomí alianci jako první, zajistí si výhodu jednoznačnou první rány...}\n"
+"\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:12
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
-#| "This Scenario is played over 13 Rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "This Scenario is played over 16 Rounds.\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
-"Tento Scénář se hraje na 13 Kol.\n"
+"Tento Scénář se hraje na 16 Kol.\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:15
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Player Setup}}\n"
-#| "\\textbf{Player Count:} 2 or 4\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\\textbf{Player Count:} 5 free-for-all\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
-"\\textbf{Počet Hráčů:} 2 nebo 4\n"
+"\\textbf{Počet Hráčů:} 5 kdokoli vítán\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:17
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Resources:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Resources:} 10 \\svg{gold}, 6 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Úvodní Suroviny:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 10 \\svg{gold}, 6 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:24
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × A Few \\bronze\\ Units with the lowest Recruitment cost\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -218,22 +199,13 @@ msgid ""
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Hrstku \\bronze\\ Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item 3 × Hrstku \\bronze\\ Jednotek\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:36
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{For a 2-player Scenario:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Starting (I) Map Tile\n"
-#| "  \\item 2 × Near (IV--V) Map Tile\n"
-#| "  \\item 4 × Far (II--III) Map Tile\n"
-#| "  \\item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item 5 × Starting (I) Map Tile; \\textbf{rotate them} so that their \\textbf{blocked Fields} match the ones marked in the Scenario map layout\n"
@@ -243,40 +215,29 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Scénář pro 2 hráče:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Startovní (I) Dílek Mapy\n"
-"  \\item 2 × Blízký (IV--V) Dílek Mapy\n"
-"  \\item 4 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy, který musí obsahovat Pole Dračí Utopie\n"
+"  \\item 5 × Startovní (I) Dílek Mapy; \\textbf{Natočte je} tak, že jejich \\textbf{blokovaná Pole} odpovídají těm na mapě Scénáře\n"
+"  \\item 10 × Blízký (IV--V) Dílek Mapy\n"
+"  \\item 10 × Vzdálený (II--III) Dílek Mapy\n"
+"  \\item 5 × Středový (VI--VII) Dílek Mapy\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:39
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-#| "Slay the Dragon Boss with your Main Hero.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "Score the most Victory Points (VPs) by the end of the \\nth{16} Round.\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Podmínky Vítězství}}\n"
-"Zabijte Dračího Bosse se svým Hlavním Hrdinou.\n"
+"Zaskórujte nejvíce Vítězných Bodů (VB) do konce 16. Kola.\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:50
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the Timed Events of Round 6.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{4} Round:}\n"
 "\\begin{itemize}\n"
@@ -288,20 +249,19 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. Kolo:}\n"
+"\\textbf{4. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 6. Kola.\n"
+"  \\item Ignorujte všechny žluté hranice na Startovních (I) Dílcích Mapy až do konce hry.\n"
+"\\end{itemize}\n"
+"\\textbf{6., 9. a12. Kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Odeberte Černé Kostičky ze všech Větrných a Vodních Mlýnů.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:60
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far Tiles, Minor or Major Artifacts on Near Tiles, and Major or Relic Artifacts on Center Tiles.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic).\n"
@@ -312,7 +272,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Rozdělte Balíček Artefaktů podle vzácnosti na 3 samostatné Balíčky (Menší, Větší a Relikvie). Hráč může získat pouze Menší Artefakty na Startovních nebo Vzdálených Dílcích, Menší nebo Větší Artefakty na Blízkých Dílcích a Větší nebo Relikvie na Středových Dílcích.\n"
+"  \\item Rozdělte Balíček Artefaktů podle vzácnosti na 3 samostatné Balíčky (Menší, Větší a Relikvie). Hráč smí získat pouze Menší Artefakty na Startovních nebo Vzdálených Dílcích, Menší nebo Větší Artefakty na Blízkých Dílcích a Větší nebo Relikvie na Středových Dílcích.\n"
+"  \\item Rozdělte Balíček Kouzel na 2 samostatné Balíčky (Základní a Expertní Kouzla). Magický Šíp je Základní Kouzlo.\n"
+"    Hráč smí získat pouze Základní Kouzla na Startovních nebo Vzdálených Dílcích, Expertní Kouzla pouze na Blízkých nebo Středových Dílcích.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -327,6 +289,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Každý \\svg[12]{movement_token_green} na plánu mapy je jednosměrný monolit.\n"
+"    Libovolný Hrdina na Poli s \\svg[12]{movement_token_green} mířícím ven může zaplatit  1 \\svgeven{movement} aby se dostal na Pole kam \\svg[12]{movement_token_green} míří.\n"
+"  \\item Můžete bránit své Město svým Hrdinou, máte-li Hlavního Hrdinu na Startovním (I) Dílku Mapy.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:75
@@ -340,6 +308,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"Vítězné Body (VB) se počítají podle knihy Turnajů. Navíc získá:\n"
+"\\begin{itemize}\n"
+"  \\item 2 VB hráč, který ovládal Dračí Utopii jako první\n"
+"  \\item 2 VB hráč, který ovládá Dračí Utopii na konci hry\n"
+"  \\item 5 VB hráč, který donesl Grál do svého města NEBO 3 VB hráč, který má Grál u sebe\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: clash/the_fractured_kingdoms.tex:85
@@ -356,6 +331,16 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Volitelná Pravidla}}\n"
+"\\begin{itemize}\n"
+"  \\item Všechny \\svg[12]{movement_token_green} označují dvousměrné monolity místo jednosměrných.\n"
+"    Hrdinové smí cestovat oběma směry zaplacením 1~\\svgeven{movement}.\n"
+"  \\item Monolity jsou na začátku neaktivní (otočte \\svg[12]{movement_token_red} stranou nahoru).\n"
+"    Hrdinové musí zaplatit 1~\\svg{building_materials} a 1~\\svgeven{movement} aby Monolit aktivovali.\n"
+"  \\item Hrdinové mohou Monolit zničit zaplacením 1~\\svgeven{movement}.\n"
+"    Otočte zničený Monolit \\svg[12]{movement_token_red} stranou nahoru.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:91
@@ -364,6 +349,8 @@ msgid ""
 "[overlay, remember picture]\n"
 "\n"
 msgstr ""
+"[overlay, remember picture]\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:102
@@ -381,6 +368,17 @@ msgid ""
 "  }\n"
 "\n"
 msgstr ""
+"  \\newcommand{\\blocked}[3]{%\n"
+"    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
+"    \\begin{scope}[shift={(#1,#2)}, rotate=#3]\n"
+"      \\iftoggle{noartbackground}\n"
+"      {\\draw[draw=darkyellow, thick, pattern=north east lines, pattern color=darkyellow]}\n"
+"      {\\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=\\iftoggle{noartbackground}{0.9}{0.5}]}\n"
+"        (0:0.56cm) -- (60:0.56cm) -- (120:0.56cm) --\n"
+"        (180:0.56cm) -- (240:0.56cm) -- (300:0.56cm) -- cycle;\n"
+"    \\end{scope}\n"
+"  }\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:108
@@ -393,54 +391,36 @@ msgid ""
 "  }\n"
 "\n"
 msgstr ""
+"  \\newcommand{\\arrow}[3]{\n"
+"    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
+"    \\node[rotate=#3, opacity=0.5] at ([shift={(2pt,-2pt)}]#1,#2) {\\includegraphics[height=23px]{\\images/movement_token_shadow.png}};\n"
+"    \\node[rotate=#3] at (#1, #2) {\\svg[20]{movement_token_green}};\n"
+"  }\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:112
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-#| "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-#| "  };\n"
-#| "  \\node(map)[anchor=center] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-#| "  };\n"
-#| "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-#| "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-#| "  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
-#| "  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
+#, no-wrap
 msgid ""
 "  \\node(bg)[anchor=center, opacity=0.07, xshift=2em, yshift=-9.5em] at (current page.center) {\n"
 "    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/two_way_monolith.png}\n"
 "  };\n"
 "\n"
 msgstr ""
-"[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
+"  \\node(bg)[anchor=center, opacity=0.07, xshift=2em, yshift=-9.5em] at (current page.center) {\n"
+"    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/two_way_monolith.png}\n"
 "  };\n"
-"  \\node(map)[anchor=center] at (current page.center) {\n"
-"    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-"  };\n"
-"  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-"  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
-"  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:114
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[overlay]\n"
-#| "  \\centering\n"
-#| "  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+#, no-wrap
 msgid ""
 "  \\node at (9, -12) {\\includegraphics[width=0.9\\paperwidth]{\\maps/the_fractured_kingdoms.png}};\n"
 "\n"
 msgstr ""
-"[overlay]\n"
-"  \\centering\n"
-"  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+"  \\node at (9, -12) {\\includegraphics[width=0.9\\paperwidth]{\\maps/the_fractured_kingdoms.png}};\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:117
@@ -450,6 +430,9 @@ msgid ""
 "  \\arrow{14.4}{-17.6}{38}\n"
 "\n"
 msgstr ""
+"  \\arrow{12.35}{-15.7}{-142}\n"
+"  \\arrow{14.4}{-17.6}{38}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:120
@@ -459,6 +442,9 @@ msgid ""
 "  \\arrow{16.2}{-8.55}{108}\n"
 "\n"
 msgstr ""
+"  \\arrow{13.91}{-9.95}{-72}\n"
+"  \\arrow{16.2}{-8.55}{108}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:123
@@ -468,6 +454,9 @@ msgid ""
 "  \\arrow{8.75}{-6.9}{4}\n"
 "\n"
 msgstr ""
+"  \\arrow{8.2}{-4.35}{-176}\n"
+"  \\arrow{8.75}{-6.9}{4}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:126
@@ -477,6 +466,9 @@ msgid ""
 "  \\arrow{4.2}{-10.75}{81}\n"
 "\n"
 msgstr ""
+"  \\arrow{1.5}{-10.35}{-99}\n"
+"  \\arrow{4.2}{-10.75}{81}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:129
@@ -486,6 +478,9 @@ msgid ""
 "  \\arrow{5.45}{-18.7}{-25}\n"
 "\n"
 msgstr ""
+"  \\arrow{6.65}{-16.1}{155}\n"
+"  \\arrow{5.45}{-18.7}{-25}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:131
@@ -494,6 +489,8 @@ msgid ""
 "  \\blocked{7.05}{-8.85}{-25.5}\n"
 "\n"
 msgstr ""
+"  \\blocked{7.05}{-8.85}{-25.5}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:133
@@ -502,6 +499,8 @@ msgid ""
 "  \\blocked{11.40}{-8.87}{23}\n"
 "\n"
 msgstr ""
+"  \\blocked{11.40}{-8.87}{23}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:135
@@ -510,6 +509,8 @@ msgid ""
 "  \\blocked{12.69}{-13.12}{67.7}\n"
 "\n"
 msgstr ""
+"  \\blocked{12.69}{-13.12}{67.7}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:137
@@ -518,6 +519,8 @@ msgid ""
 "  \\blocked{9.135}{-15.58}{0}\n"
 "\n"
 msgstr ""
+"  \\blocked{9.135}{-15.58}{0}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:139
@@ -526,3 +529,5 @@ msgid ""
 "  \\blocked{5.58}{-13.01}{-71}\n"
 "\n"
 msgstr ""
+"  \\blocked{5.58}{-13.01}{-71}\n"
+"\n"
