--- a/translations/title_page.tex/cs.po
+++ b/translations/title_page.tex/cs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-03-26 09:51+0000\n"
-"PO-Revision-Date: 2024-11-01 11:08+0000\n"
-"Last-Translator: Anonymous <noreply@weblate.org>\n"
+"PO-Revision-Date: 2025-05-04 14:04+0000\n"
+"Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/sections/scenarios/cs/>\n"
 "Language: cs\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
-"X-Generator: Weblate 5.8.2-dev\n"
+"X-Generator: Weblate 5.12-dev\n"
 
 #.  !TeX spellcheck = en_US
 #. type: tikzpicture
@@ -62,3 +62,11 @@ msgid ""
 "{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
 "svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
+"\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
+"\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
+"{\\svgs/silver.svg} \\includesvg[height=0.1px]{\\svgs/golden.svg} "
+"\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
+"{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
+"\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
+"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
