Translations regarding coop scenarios

--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-05-04 14:05+0000\n"
+"PO-Revision-Date: 2025-05-06 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/coop-scenarios/emerald_island/cs/>\n"
@@ -297,12 +297,6 @@ msgstr ""
 #. type: multicols
 #: coops/emerald_island.tex:43
 #, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of Familiars\n"
-#| "  \\item A Few Magogs\n"
-#| "\\end{itemize}\n"
-#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item P × Starting (I) Map Tile\n"
@@ -311,8 +305,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Tlupa Rarášků\n"
-"  \\item Hrstka Magogů\n"
+"  \\item H × Startovní (I) Dílek Mapy\n"
+"  \\item 4H × Vzdálený (II--III) Dílek Mapy\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -467,32 +461,13 @@ msgstr ""
 #. type: tikzpicture
 #: coops/emerald_island.tex:121
 #, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-#| "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-#| "  };\n"
-#| "  \\node(map)[anchor=center] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-#| "  };\n"
-#| "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-#| "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-#| "  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
-#| "  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
 msgid ""
 "[overlay]\n"
 "  \\node(bg)[anchor=center, opacity=0.07, xshift=-2em, yshift=-23em] at (current page.south) {\n"
 "    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/ammo_cart.png}\n"
 "  };"
 msgstr ""
-"[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-"  };\n"
-"  \\node(map)[anchor=center] at (current page.center) {\n"
-"    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-"  };\n"
-"  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-"  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
-"  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
+"[overlay]\n"
+"  \\node(bg)[anchor=center, opacity=0.07, xshift=-2em, yshift=-23em] at (current page.south) {\n"
+"    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/ammo_cart.png}\n"
+"  };"
