--- a/translations/close_to_enemies.tex/cs.po
+++ b/translations/close_to_enemies.tex/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-05-04 14:05+0000\n"
+"PO-Revision-Date: 2025-05-05 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/coop-scenarios/close_to_enemies/cs/>\n"
@@ -423,7 +423,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Nějaký hráč ztratí svoje Město.\n"
-"  \\item Alespoň jedna Osada zůstane neobsazená na konci 7. kola. Čas vypšel!\n"
+"  \\item Alespoň jedna Osada zůstane neobsazená na konci 7. Kola. Čas vypšel!\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -677,10 +677,10 @@ msgstr ""
 "    \\renewcommand{\\azure}{\\origazure[12]}\n"
 "\n"
 "      \\begin{tabularx}{0.95\\linewidth}{p{0.2\\linewidth}XXXX} &\n"
-"      \\darkcell{\\textbf{Easy}} &\n"
-"      \\darkcell{\\textbf{Normal}} &\n"
-"      \\darkcell{\\textbf{Hard}} &\n"
-"      \\darkcell{\\textbf{Impossible}}\\\\\n"
+"      \\darkcell{\\textbf{Lehká}} &\n"
+"      \\darkcell{\\textbf{Normální}} &\n"
+"      \\darkcell{\\textbf{Těžká}} &\n"
+"      \\darkcell{\\textbf{Nemožná}}\\\\\n"
 "      \\darkcell[1.2]{První vlna}\n"
 "        & \\lightcell[1.2]{\\bronze}\n"
 "        & \\lightcell[1.2]{\\bronze \\bronze}\n"
@@ -721,35 +721,16 @@ msgstr "\\captionof{figure}{\\textbf{SCÉNÁŘ PRO 4 HRÁČE | PŘÍKLAD}}"
 #. type: tikzpicture
 #: coops/close_to_enemies.tex:246
 #, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-#| "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-#| "  };\n"
-#| "  \\node(map)[anchor=center] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-#| "  };\n"
-#| "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-#| "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-#| "  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
-#| "  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
 msgid ""
 "[overlay]\n"
 "  \\node(bg)[anchor=center, opacity=0.07, xshift=-2em, yshift=-24em] at (current page.south) {\n"
 "    \\includegraphics[width=1.1\\paperwidth, keepaspectratio]{\\art/ballista.png}\n"
 "  };"
 msgstr ""
-"[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-"  };\n"
-"  \\node(map)[anchor=center] at (current page.center) {\n"
-"    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-"  };\n"
-"  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-"  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
-"  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
+"[overlay]\n"
+"  \\node(bg)[anchor=center, opacity=0.07, xshift=-2em, yshift=-24em] at (current page.south) {\n"
+"    \\includegraphics[width=1.1\\paperwidth, keepaspectratio]{\\art/ballista.png}\n"
+"  };"
 
 #. type: figure
 #: coops/close_to_enemies.tex:246
