--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -424,19 +424,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:97
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.\n"
-#| "  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
-#| "    The victorious player rolls two Treasure Dice and resolves one of them.\n"
-#| "  \\item Additionally, no player can:\n"
-#| "  \\begin{itemize}\n"
-#| "      \\item Attack other Heroes.\n"
-#| "      \\item Capture a Mine or Settlement that is already Flagged.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Ignore all yellow borders on Starting Tiles.\n"
@@ -452,6 +440,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
+"  \\item Ignorujte všechny žluté hranice na Startovních Dílcích.\n"
 "  \\item Hráči mohou obchodovat se surovinami, když jeden z Hrdinů aktivního hráče navštíví Tržiště nebo stojí na Poli sousedícím se spojeneckým Hrdinou.\n"
 "  \\item Hrdina, který porazí nepřátelskou armádu, získá 2 \\svg{experience}.\n"
 "    Vítězný hráč hodí dvěma Kostkami Pokladu a vyřeší jednu z nich.\n"
@@ -517,15 +506,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:121
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
-#| "  \\item Enemy armies have 3 MPs per Round.\n"
-#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-#| "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
-#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, fuzzy
 msgid ""
 "  \\item Enemy armies have 3 MPs per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
@@ -535,8 +516,8 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"  \\item Nepřátelské armády mají 3 Body Pohybu za Kolo.\n"
 "  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
-"  \\item Nepřátelské armády mají 3 MP za Kolo.\n"
 "  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
 "    Umístěte Černé Kostičky na jakékoliv Pole, kterým projdou, a od toho okamžiku považujte tato Pole za prázdná.\n"
 "  \\item Pokud by se nepřátelský pohyb mohl ubírat různými směry, hráči rozhodnou, kterým směrem půjdou.\n"
@@ -647,29 +628,6 @@ msgstr ""
 #. type: Plain text
 #: coops/sentinels.tex:192
 #, fuzzy
-#| msgid ""
-#| "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy "
-#| "Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
-#| "\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
-#| "{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
-#| "\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
-#| "\\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round "
-#| "10}\\\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\bronze \\silver "
-#| "\\silver \\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver "
-#| "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
-#| "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, "
-#| "1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver "
-#| "\\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
-#| "\\silver \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\golden "
-#| "\\azure \\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\"
-#| "\\ \\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\silver \\silver \\golden "
-#| "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-#| "\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
-#| "\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
-#| "\\darkcell[1.4]{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden "
-#| "\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
-#| "\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
-#| "\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgid ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
 "\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
@@ -695,12 +653,13 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Síla Nepřátelských Armád}\\"
-"\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
-"\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
-"{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
-"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Kola "
-"6 + 7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ \\darkcell[1.4]"
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
+"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
+"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
+"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
+"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
+"& \\darkcell{Kola 6 + 7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ \\darkcell[1.4]"
 "{Lehká} & \\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & "
 "\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
 "\\lightcell[1.4]{\\silver \\silver \\golden \\azure \\footref{azure} "
@@ -721,7 +680,7 @@ msgstr ""
 #. type: Plain text
 #: coops/sentinels.tex:196
 msgid "\\stepcounter{footnote}"
-msgstr ""
+msgstr "\\stepcounter{footnote}"
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:196
