--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -518,7 +518,7 @@ msgstr ""
 "\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normální}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Těžká}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Nemožná}}\\\\ "
-"\\lightcell[1.8]{No additional\\\\changes} & \\lightcell[1.8]"
+"\\lightcell[1.8]{Žádné další\\\\změny} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
 "22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
