--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -484,12 +484,6 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:114
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  {\\transparent{0.2}\\includegraphics[width=0.7\\linewidth, keepaspectratio]{\\art/slayer.png}}\n"
-#| "\\end{center}\n"
-#| "\n"
 msgid ""
 "\\begin{center}\n"
 "  \\transparent{0.2}{\\includegraphics[width=\\linewidth]{\\art/dimension_door.png}}\n"
@@ -497,57 +491,12 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  {\\transparent{0.2}\\includegraphics[width=0.3\\linewidth, keepaspectratio]{\\art/slayer.png}}\n"
+"  \\transparent{0.2}{\\includegraphics[width=\\linewidth]{\\art/dimension_door.png}}\n"
 "\\end{center}\n"
 "\n"
 
 #. type: Plain text
 #: coops/titans_stronghold.tex:193
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
-#| "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
-#| "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svg[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}"
-#| "XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
-#| "\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
-#| "{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-#| "2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
-#| "2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
-#| "3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
-#| "5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver "
-#| "4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-#| "\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze "
-#| "10\\silver\\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze "
-#| "10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver "
-#| "5\\golden 3\\azure \\linebreak Then\\linebreak 2\\bronze 5\\silver "
-#| "5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden "
-#| "4\\azure \\linebreak Then\\linebreak 1\\bronze 5\\silver 7\\golden "
-#| "4\\azure}\\\\ \\darkcell[1.8]{5 players} & \\lightcell[1.8]{6\\bronze "
-#| "6\\silver 4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze "
-#| "6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver "
-#| "4\\golden 2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver "
-#| "4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden "
-#| "4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden "
-#| "4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
-#| "\\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
-#| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
-#| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-#| "\\end{tabularx} }"
 msgid ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
 "Stronghold Armies}\\\\ \\bigskip \\let\\origbronze\\bronze "
@@ -593,38 +542,40 @@ msgid ""
 "3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Síla Armád Pevnosti "
-"Titánů}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]{bronze}} "
-"\\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}[0]"
-"{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
+"Titánů}\\\\ \\bigskip \\let\\origbronze\\bronze "
+"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
+"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
+"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
+"\\renewcommand{\\azure}{\\origazure[12]} "
 "\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
 "\\darkcell{Lehká} & \\darkcell{Normální} & \\darkcell{Těžká} & "
-"\\darkcell{Nemožná}\\\\ \\darkcell[1.2]{1 hráč} & \\lightcell[1.2]{3\\bronze "
+"\\darkcell{Nemožná}\\\\ \\darkcell[1.2]{1 Hráč} & \\lightcell[1.2]{3\\bronze "
 "2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
 "2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden "
 "2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\ "
-"\\darkcell[1.2]{2 hráči} & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden "
+"\\darkcell[1.2]{2 Hráči} & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden "
 "1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver 3\\golden 2\\azure} & "
 "\\lightcell[1.2]{2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.2]"
-"{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 hráči} & "
+"{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 Hráči} & "
 "\\lightcell[1.8]{8\\bronze 7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]"
 "{6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze "
 "3\\silver 4\\golden 3\\azure \\linebreak Poté\\linebreak 2\\bronze 4\\silver "
 "3\\golden 2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden "
 "3\\azure \\linebreak Poté\\linebreak 1\\bronze 4\\silver 5\\golden "
-"3\\azure}\\\\ \\darkcell[1.8]{4 hráči} & \\lightcell[1.8]{10\\bronze "
+"3\\azure}\\\\ \\darkcell[1.8]{4 Hráči} & \\lightcell[1.8]{10\\bronze "
 "10\\silver \\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze "
 "10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver "
 "5\\golden 3\\azure \\linebreak Poté\\linebreak 2\\bronze 5\\silver 5\\golden "
 "3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure "
 "\\linebreak Poté\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-"\\darkcell[1.8]{5 hráčů} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden "
+"\\darkcell[1.8]{5 Hráčů} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden "
 "1\\azure \\linebreak Poté\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} "
 "& \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
 "Poté\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]"
 "{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak Poté\\linebreak "
 "3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze "
 "6\\silver 8\\golden 6\\azure \\linebreak Poté\\linebreak 2\\bronze 6\\silver "
-"8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 hráčů} & \\lightcell[1.8]"
+"8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 Hráčů} & \\lightcell[1.8]"
 "{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak Poté\\linebreak "
 "7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
 "8\\silver 4\\golden 3\\azure \\linebreak Poté\\linebreak 6\\bronze 7\\silver "
@@ -636,38 +587,15 @@ msgstr ""
 
 #. type: center
 #: coops/titans_stronghold.tex:199
-#, fuzzy
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  {\\transparent{0.2}\\includegraphics[width=0.7\\linewidth, "
-#| "keepaspectratio]{\\art/slayer.png}}\n"
-#| "\\end{center}\n"
-#| "\n"
 msgid ""
 "\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 msgstr ""
-"\\begin{center}\n"
-"  {\\transparent{0.2}\\includegraphics[width=0.3\\linewidth, keepaspectratio]"
-"{\\art/slayer.png}}\n"
-"\\end{center}\n"
-"\n"
+"\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
+"{\\art/land_mine.png}}"
 
 #. type: tikzpicture
 #: coops/titans_stronghold.tex:207
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-#| "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-#| "  };\n"
-#| "  \\node(map)[anchor=center] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-#| "  };\n"
-#| "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-#| "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-#| "  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
-#| "  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
 msgid ""
 "[remember picture, overlay]\n"
 "  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
@@ -675,16 +603,9 @@ msgid ""
 "  };"
 msgstr ""
 "[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-"  };\n"
-"  \\node(map)[anchor=center] at (current page.center) {\n"
-"    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-"  };\n"
-"  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-"  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
-"  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
+"  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
+"    \\includegraphics[width=\\paperwidth, keepaspectratio]{\\art/hellstorm_helmet.png}\n"
+"  };"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
