--- a/sections/credits.tex
+++ b/sections/credits.tex
@@ -11,7 +11,9 @@
 This project shamelessly borrows best practices from the \href{https://github.com/Heegu-sama/Homm3BG}{\textbf{Rule Book Rewrite Project}}, including \LaTeX{} code, GitHub engineering, and translation framework.
 You should check it out if you haven't seen it yet.
 
-\textbf{Scenario templating and \LaTeX{} writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov
+\textbf{Scenario templating, tooling and automation}: Andrzej Wiącek, Tomáš Zeman
+
+\textbf{Contributing scenarios in \LaTeX{}:} Andrzej Wiącek, Tomáš Zeman, Xavier Borelly, Saveliy Ivanov, Tyson Heckert, Justus Törmälehto, Adam Obuchowicz, Vojtěch Růžička.
 
 \phantom{Translators placeholder}
 
