dragon valley additional rules rebalancing

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -78,19 +78,28 @@ If no player has achieved an immediate victory, the player controlling a Dragon 
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
-  \item Level VII \textbf{Settlements}: Increase all incomes by 1 space.
+  \item Level VII \textbf{Settlements}: Increase all incomes by 1 space and Draw Cards up to your Hand Limit.
   \item \textbf{Grail Token}: When a player gains or starts their turn with Grail Token, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}.
   \item \textbf{Dragon Utopias} are guarded by only dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one and then put a Black Cube:
   \begin{itemize}
     \item Sacrifice any number of Units and recruit one of the defeated Dragons for discount of those sacrificed Units' recruitment cost.
-    \item Receive 15 \svg{gold} AND Search (3) \svg{spellpower}.
+    \item Receive 15 \svg{gold} AND Search (3) \svg{spellpower} or \svg{artifact}.
+  \end{itemize}
 \end{itemize}
 
 \begin{center}
   \vspace*{\fill}
   \includegraphics[width=1.0\linewidth]{\maps/dragon-valley-2p.png}
   \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
+\end{center}
+
+\begin{itemize}
+  \item When a Secondary Hero starts their turn on a (I) or (II-III) Map Tile, that Hero gains +1 \svgeven{movement}.
+  \item \textbf{Obelisk}: Flaggable. You may teleport to another Obelisk that any player has flagged by spending 1 \svgeven{movement}.
+\end{itemize}
+
+\begin{center}
   \vspace*{\fill}
   \includegraphics[width=1.0\linewidth]{\maps/dragon-valley-3p.png}
   \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
