--- a/sections/credits.tex
+++ b/sections/credits.tex
@@ -13,7 +13,7 @@ You should check it out if you haven't seen it yet.
 
 \textbf{Scenario templating, tooling and automation}: Andrzej Wiącek, Tomáš Zeman
 
-\textbf{Contributing scenarios in \LaTeX{}:} Andrzej Wiącek, Tomáš Zeman, Xavier Borelly, Saveliy Ivanov, Tyson Heckert, Justus Törmälehto, Adam Obuchowicz, Vojtěch Růžička.
+\textbf{Contributing scenarios in \LaTeX{}:} Andrzej Wiącek, Tomáš Zeman, Xavier Borelly, Saveliy Ivanov, Tyson Heckert, Justus Törmälehto, Adam Obuchowicz, Vojtěch Růžička.  % no-check-caps
 
 \phantom{Translators placeholder}
 
