dragon utopia recruit rule

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -37,7 +37,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
   \item P × Starting (I) Map Tile
   \item 3P × Far (II-III) Map Tiles
   \item 2P × Near (IV-V) Map Tiles
-  \item P × Center (VI-VII) Map Tile (C5 is treated as a Settlement)
+  \item P × Center (VI-VII) Map Tile
   \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
@@ -78,12 +78,12 @@ If no player has achieved an immediate victory, the player controlling a Dragon 
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
-  \item Level VII \textbf{Settlements}: Increase all incomes by 1 space and Draw Cards up to your Hand Limit.
+  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space and Draw Cards up to your Hand Limit.
   \item \textbf{Grail Token}: When a player gains or starts their turn with Grail Token, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}.
   \item \textbf{Dragon Utopias} are guarded by only dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one and then put a Black Cube:
   \begin{itemize}
-    \item Sacrifice any number of Units and recruit one of the defeated Dragons for discount of those sacrificed Units' recruitment cost.
+    \item Sacrifice any number of Units, then recruit one of the defeated Dragons at a discount equal to the total recruitment cost of the sacrificed Units.
     \item Receive 15 \svg{gold} AND Search (3) \svg{spellpower} or \svg{artifact}.
   \end{itemize}
 \end{itemize}
