grail rule addition

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -74,12 +74,12 @@ If no player has achieved an immediate victory, the player controlling a Dragon 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item \textbf{Obelisk:} Draw 1 Card from your Deck. \textit{Visitable once per Faction.}
-  \item When fighting a Neutral Combat, players may increase the difficulty level by +1 for an extra 5 \svg{gold} and Search (2) \svg{artifact} or \svg{spellpower}. % no-check-caps
+  \item When a Secondary Hero starts their turn on a (I) or (II-III) Map Tile, that Hero gains +1 \svgeven{movement}.
+  \item When fighting a Neutral Combat, players may increase the difficulty level by +1 for an extra 5 \svg{gold} and Search (2) \svg{spellpower} or \svg{artifact}. % no-check-caps
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item After winning a Combat against another player, draw up to your Hand Limit and discard 1 Card.
   \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space and Draw Cards up to your Hand Limit.
-  \item \textbf{Grail Token}: When a player gains or starts their turn with Grail Token, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}.
   \item \textbf{Dragon Utopias} are guarded by only dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one and then put a Black Cube:
   \begin{itemize}
@@ -95,7 +95,7 @@ If no player has achieved an immediate victory, the player controlling a Dragon 
 \end{center}
 
 \begin{itemize}
-  \item When a Secondary Hero starts their turn on a (I) or (II-III) Map Tile, that Hero gains +1 \svgeven{movement}.
+  \item \textbf{Grail Token}: When a player gains or starts their turn with Grail Token, gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Secondary and Main Heroes may gain the Grail Token.
   \item \textbf{Obelisk}: Flaggable. You may teleport to another Obelisk that any player has flagged by spending 1 \svgeven{movement}.
 \end{itemize}
 
