--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -55,7 +55,7 @@ The game ends at the end of the Round when any of these conditions are met:
  \item At the end of Round 13.
 \end{itemize}
 
-If no player has achieved an immediate victory, the player controlling a Dragon Utopia wins. If both Dragon Utopias are controlled by different players, they draw Cards up to their Hand Limit and start a final Combat. The winner of that Combat wins the game.
+If no player has achieved an immediate victory, the player controlling a Dragon Utopia wins. If both Dragon Utopias are controlled by different players, they draw Cards up to their Hand Limit and start a final Combat. The winner of that Combat wins the game. If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{4} Round:}
