--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -8,7 +8,7 @@
 \textit{A valley of secrets long forgotten. Its heart belongs to the beasts of old, while its fringes lure the bold and the desperate. Fight for power, claim the land, or perish like those before you.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 13 Rounds
+This Scenario plays out over 13 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
