--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -27,7 +27,7 @@ This Scenario plays out over 13 Rounds.
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
-  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+  \item Each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
